--- a/templates/index.html
+++ b/templates/index.html
@@ -17,11 +17,11 @@
             <nav>
                 <ul id="menu">
                     <li><a active href="#">Coaching</a></li>
-                    <li><a href="#"></a>Qui suis-je ?</li>
-                    <li><a href="#"></a>Tarifs</li>
-                    <li><a href="#"></a>Résultats</li>
-                    <li><a href="#"></a>Contact</li>
-                    <li><a href="#"></a>Blog</li>
+                    <li><a href="#">Qui suis-je ?</a></li>
+                    <li><a href="tarif.html">Tarifs</a></li>
+                    <li><a href="#">Résultats</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Blog</a></li>
                 </ul>
             </nav>
         </header>
@@ -34,6 +34,7 @@
     </div>
     <section>
         <h2>Coaching sur mesure</h2>
+        
         <div class="conteneur">
             <div class="carte-cat-coaching">
                 <h3>Développement musculaire</h3>
