--- a/templates/index.html
+++ b/templates/index.html
@@ -2,88 +2,219 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../static/assets/css/cycoaching.css"/>
-    <link rel="stylesheet" href="../static/assets/css/reviews.css"/>
+    <link rel="stylesheet" href="../static/assets/css/style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- <link rel="stylesheet" href="../static/assets/css/cycoaching.css"/>
+    <link rel="stylesheet" href="../static/assets/css/reviews.css"/> -->
     <title>Coach Sportif Toulouse - CYCoaching</title>
 </head>
 
 <body>
-    <div class="section_principale">
-        <header>
-            <div id="logo">
-                <img src="../static/assets/img/logo_cy_no_bg.png" alt="logo"/>
-                <h1>CYCoaching</h1>
-            </div>
-            <nav>
-                <ul id="menu">
-                    <li><a active href="#">Coaching</a></li>
-                    <li><a href="#">Qui suis-je ?</a></li>
-                    <li><a href="tarif.html">Tarifs</a></li>
-                    <li><a href="#">Résultats</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-            </nav>
-        </header>
+    <header>
+        <!-- <div id="logo">
+            <img src="../static/assets/img/logo_cy_no_bg.png" alt="logo"/>
+            <h1>CYCoaching</h1>
+        </div> -->
+        <nav>
+            <ul id="menu">
+                <li><a active href="#">Coaching</a></li>
+                <li><a href="#">Qui suis-je ?</a></li>
+                <li><a href="tarif.html">Tarifs</a></li>
+                <li><a href="#">Résultats</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <section id="section_principale_texte">
-            <h2>CYCoaching</h2>
-            <h2>Coach sportif à Toulouse</h2>
-            <h3>Spécialiste en recomposition corporelle et en boxe pieds poings</h3>
-        </section>
+    <div class="background-container">
+        <div class="background-image"></div>
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h1>CYCoaching</h1>
+            <h1>Coach sportif à Toulouse</h1>
+            <h2>Spécialiste en recomposition corporelle et en boxe pieds poings</h2>
+        </div>
     </div>
-    <section>
-        <h2>Coaching sur mesure</h2>
-        
-        <div class="conteneur">
-            <div class="carte-cat-coaching">
-                <h3>Développement musculaire</h3>
+    
+    <section class="services">
+        <h2>À qui je m'adresse ?</h2>
+
+        <div class= "services-wrapper">
+            <div class="service-container">
+                <i class="fas fa-dumbbell fa-2x"></i>
                 <p>Pour toute personne souhaitant développer sa masse musculaire globale ou ciblée (Bas du corps / Haut du corps / CORE / ...)</p>
             </div>
-            <div class="carte-cat-coaching">
-                <h3>Remise en forme</h3>
+    
+            <div class="service-container">
+                <i class="fas fa-heartbeat fa-2x"></i>
                 <p>Pour ceux qui ont pour objectifs de se tonifier ou de se remettre en forme afin d'optimiser leur santé au quotidien</p>
             </div>
-            <div class="carte-cat-coaching">
-                <h3>Sports de combat</h3>
+    
+            <div class="service-container">
+                <i class="fas fa-fist-raised fa-2x"></i>
                 <p>Les aventureux qui ont envie de découvrir une nouvelle pratique sportive, notamment les sports de combats</p>
             </div>
-            <div class="carte-cat-coaching">
-                <h3>Self defense</h3>
+    
+            <div class="service-container">
+                <i class="fas fa-shield-alt fa-2x"></i>
                 <p>Pour les femmes intéressées d'apprendre les rudiments de la Self défense afin de gagner en confiance et repérer et réagir face à une agression.</p>
             </div>
         </div>
     </section>
 
-    <section>
+    <section class="coaching-methode">
         <h2>Ma méthode de coaching</h2>
+        <div class="services-wrapper">
+            <div class="service-container">
+                <i class="fas fa-flask fa-2x"></i>
+                <p>Une optimisation de ta progression basée sur les dernières études scientifiques.</p>
+            </div>
+            <div class="service-container">
+                <i class="fas fa-dumbbell fa-2x"></i>
+                <p>Une expérience de terrain de + de 3000h dans 2 domaines différents (Musculation / Boxe)</p>
+            </div>
+            <div class="service-container">
+                <i class="fas fa-smile fa-2x"></i>
+                <p>Un enthousiasme et une bonne humeur qui vous fera vous dépasser sans pression.</p>
+            </div>
+            <div class="service-container">
+                <i class="fas fa-running fa-2x"></i>
+                <p>Une pratique personnelle multisport, qui me permettra de me rapprocher au mieux de vos besoins (Boxe / MMA / Musculation / Randonnée / Sports de glisse / …)</p>
+            </div>
+        </div>
+        Mettre boutton pour contacter
     </section>
 
     <section>
         <h2>Ils m'ont fait confiance !</h2>
-        <div id="avis-displayer">
-            <div class="carte-avis">
-                <span class="photo"></span>
-                <span class="nom">Julien Tahtane</span>
-                <span class="note"></span>
-                <span class="avis">Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</span>
+        <div class="review-card-container">
+            <div class="review-wrapper">
+                <div class="review-card">
+                    <div class="review-card-header">
+                      <div class="review-card-info">
+                        <h4>Julien Tahtane</h4>
+                        <div class="rating">
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                          </div>
+                      </div>
+                    </div>
+                    <div class="review-card-content">
+                      <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
+                    </div>
+                </div>
+                <div class="review-card">
+                    <div class="review-card-header">
+                        <div class="review-card-info">
+                        <h4>Julien Tahtane</h4>
+                        <div class="rating">
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-card-content">
+                        <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
+                    </div>
+                </div>
+                <div class="review-card">
+                    <div class="review-card-header">
+                        <div class="review-card-info">
+                        <h4>Julien Tahtane</h4>
+                        <div class="rating">
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-card-content">
+                        <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
+                    </div>
+                </div>
+                <div class="review-card">
+                    <div class="review-card-header">
+                        <div class="review-card-info">
+                        <h4>Julien Tahtane</h4>
+                        <div class="rating">
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-card-content">
+                        <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
+                    </div>
+                </div>
+                <div class="review-card">
+                    <div class="review-card-header">
+                        <div class="review-card-info">
+                        <h4>Julien Tahtane</h4>
+                        <div class="rating">
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-card-content">
+                        <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
+                    </div>
+                </div>
+                <div class="review-card">
+                    <div class="review-card-header">
+                        <div class="review-card-info">
+                        <h4>Julien Tahtane</h4>
+                        <div class="rating">
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-card-content">
+                        <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
+                    </div>
+                </div>
+                <div class="review-card">
+                    <div class="review-card-header">
+                        <div class="review-card-info">
+                        <h4>Julien Tahtane</h4>
+                        <div class="rating">
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            <span class="star fas fa-star"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-card-content">
+                        <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
+                    </div>
+                </div>
             </div>
-            <div class="carte-avis">
-                <span class="photo"></span>
-                <span class="nom">Julien Tahtane</span>
-                <span class="note"><span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span></span>
-                <span class="avis">Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</span>
-            </div>
-            
         </div>
     </section>
 
-    <!-- <footer>
+    <footer>
 
-    </footer> -->
+    </footer>
 </body>
 </html>
