--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -18,10 +18,20 @@
   }
   
   /* Styles généraux */
+  html, body {
+    height: 100%;
+  }
+
   body {
     font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
     background-color: #f1f1f1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content {
+    flex: 1;
   }
 
   h1, h2, h3 {
@@ -100,6 +110,11 @@
     margin-bottom: 20px;
   }
   
+  li {
+    font-size: 18px;
+    padding-left: 20px;
+  }
+
   /* Sections */
   .services {
     background-color: var(--background-color);
@@ -198,11 +213,37 @@
     margin-right: 2px; /* Espacement entre les étoiles */
   }
   
+  /* Footer */
   footer {
-    background-color: #333;
+    background-color: var(--secondary-background-color);
     color: #fff;
+    padding: 20px 0;
+    flex-shrink: 0;
+  }
+  
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
+  .footer-links a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 10px;
+  }
+  
+  .footer-social-icons a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 10px;
+  }
+  
+  .footer-text {
     text-align: center;
-    padding: 10px;
+    margin-top: 10px;
   }
   
   /* ------------------------------------- */
