Update tarif page.

--- a/templates/tarif.html
+++ b/templates/tarif.html
@@ -26,23 +26,32 @@
     </header>
 
       <section>
-          <h2>Tarifs</h2>
-          <!-- <div class="row">
+          <div class="row">
             <div class="column">
               <img src="../static/assets/img/coaching-individuel.jpg" alt="Séance de coaching individuel">
             </div>
             <div class="column">
-              <p>Texte de description du coach...</p>
-            </div>
-          </div> -->
-          <div class="row">
-            <div class="column">
-              <img src="../static/assets/img/coaching-groupe.jpg" alt="Séance de coaching en groupe">
-            </div>
-            <div class="column">
             <div class="card">
               <div class="card-header">
-                <h3>Coaching mini-groupe (2-5 personnes)</h3>
+                <h3>Tarifs coaching individuel</h3>
+              </div>
+              <div class="card-content">
+                <p>À l'unité : <span class="bold">50€</span></p>
+                <hr class="separator">
+                <p>Carnet de 10 séances : <span class="bold">450€</span></p>
+                <hr class="separator">
+                <p>Carnet de 20 séances + 1 accessoire fitness : <span class="bold">900€</p>
+              </div>
+            </div>
+          </div>
+      </section>
+
+      <section>
+        <div class="row">
+          <div class="column">
+            <div class="card">
+              <div class="card-header">
+                <h3>Tarifs coaching mini-groupe (2-5 personnes)</h3>
               </div>
               <div class="card-content">
                 <p>Pour deux personnes : <span class="bold">30€ par personne</span></p>
@@ -50,34 +59,38 @@
                 <p>Pour trois personnes : <span class="bold">25€ par personne</span></p>
                 <hr class="separator">
                 <p>Pour plus de quatre personnes : <span class="bold">20€ par personne</p>
-                <!-- Ajoutez autant de lignes de contenu que nécessaire -->
               </div>
             </div>
           </div>
+          <div class="column">
+              <img src="../static/assets/img/coaching-groupe.jpg" alt="Séance de coaching en groupe">
+          </div>
+        </div>
       </section>
 
       <section>
-        <div class="column">
-          <div class="card">
-            <div class="card-header">
-              <h3>Coaching mini-groupe (2-5 personnes)</h3>
-            </div>
-            <div class="card-content">
-              <p>Pour deux personnes : <span class="bold">30€ par personne</span></p>
-              <hr class="separator">
-              <p>Pour trois personnes : <span class="bold">25€ par personne</span></p>
-              <hr class="separator">
-              <p>Pour plus de quatre personnes : <span class="bold">20€ par personne</p>
-                <!-- Ajoutez autant de lignes de contenu que nécessaire -->
+        <div class="row">
+          <div class="column">
+            <img src="../static/assets/img/programme.jpg" alt="Séance de coaching en groupe">
+          </div>
+          <div class="column">
+            <p>Je propose aussi deux offres de programmes à distance, basique ou personnaliśe. </br> Chaque offre comprend un programme sur 8 semaines. </p>
+            <div class="card">
+              <div class="card-header">
+                <h3>Tarifs des programmes à distance</h3>
+              </div>
+              <div class="card-content">
+                <p><span class="bold">Programme basique</span> seul (de 8 semaines) : <span class="bold">69€</span></p>
+                <hr class="separator">
+                <p><span class="bold">Programme basique</span> seul (de 8 semaines) + 1 séance de présentation + tests : <span class="bold">99€</span></p>
+                <hr class="separator">
+                <p><span class="bold">Programme personnalisé</span> comprenant un programme de 8 semaines, 1 séance encadrée, tests et analyse vidéo des mouvements : <span class="bold">149€</p>
               </div>
             </div>
-            <div class="row">
-              <div class="column">
-                <img src="../static/assets/img/coaching-groupe.jpg" alt="Séance de coaching en groupe">
-            </div>
+          </div>
         </div>
       </section>
-      
+
       <footer>
         <div class="footer-container">
           <div class="footer-links">
