--- a/templates/a-propos.html
+++ b/templates/a-propos.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Qui suis-je ?</a></li>
                 <li><a href="#">Résultats</a></li>
                 <li><a href="tarif.html">Tarifs</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>
         </nav>
