--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                 <li><a href="a-propos.html">Qui suis-je ?</a></li>
                 <li><a href="#">Résultats</a></li>
                 <li><a href="tarif.html">Tarifs</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>
         </nav>
