Move index.html page.

--- a/templates/a-propos.html
+++ b/templates/a-propos.html
@@ -16,7 +16,7 @@
         </div> -->
         <nav>
             <ul id="menu">
-                <li><a href="index.html">Coaching</a></li>
+                <li><a href="../index.html">Coaching</a></li>
                 <li><a href="#">Qui suis-je ?</a></li>
                 <li><a href="#">Résultats</a></li>
                 <li><a href="tarif.html">Tarifs</a></li>
