--- a/templates/tarif.html
+++ b/templates/tarif.html
@@ -15,7 +15,7 @@
         </div> -->
         <nav>
             <ul id="menu">
-                <li><a href="index.html">Coaching</a></li>
+                <li><a href="../index.html">Coaching</a></li>
                 <li><a href="a-propos.html">Qui suis-je ?</a></li>
                 <li><a href="#">Résultats</a></li>
                 <li><a active href="#">Tarifs</a></li>
