Update about page.

--- a/templates/a-propos.html
+++ b/templates/a-propos.html
@@ -33,7 +33,7 @@
               <div class="about-content">
                 <div class="column-image">
                   <div class="image">
-                    <img src="../static/assets/img/photo-profil.jpg" alt="Photo du coach CY Coaching">
+                    <img src="../static/assets/img/a-propos.jpg" alt="Photo du coach CY Coaching">
                   </div>
                 </div>
                 <div class="column-text">
@@ -41,7 +41,7 @@
                     <p>Je suis titulaire de deux Licences STAPS : Entrainement Sportif et Métiers de la Forme obtenues à Toulouse.</p>
                     <p class="bold">J'ai toujours eu à cœur d'aider les autres à atteindre leurs objectifs de bien-être ou de performance.
                     C'est la raison pour laquelle j'ai choisi ce métier qui me passionne.</p>
-                    <p class="elegant-list-first-p">Je suis à même de vous encadrer sur différents objectifs :</p>
+                    <p class="elegant-list-first-p">Je suis à même de t'encadrer sur différents objectifs :</p>
                     <ul class="elegant-list">
                         <li>Prise de masse musculaire</li>
                         <li>Remise en forme et tonification</li>
