Little file cleanup.

--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -56,6 +56,20 @@ section {
     color: var(--background-color);
 }
 
+.services-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.service-container {
+  flex: 0 0 23%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+}
+
 /* --------------------------------------------------------------- */
 /* Avis */
 #avis {
