--- a/templates/a-propos.html
+++ b/templates/a-propos.html
@@ -27,28 +27,26 @@
     </header>
 
     <div class="content">
-        <section id="about">
-            <div class="container">
-              <h2>À propos de moi</h2>
-              <div class="about-content">
-                <div class="column-image">
-                  <div class="image">
-                    <img src="../static/assets/img/a-propos.jpg" alt="Photo du coach CY Coaching">
-                  </div>
+        <section>
+            <h2>À propos de moi</h2>
+            <div class="about-content">
+              <div class="column-image">
+                <div class="image">
+                  <img src="../static/assets/img/a-propos.jpg" alt="Photo du coach CY Coaching">
                 </div>
-                <div class="column-text">
-                  <div class="text">
-                    <p>Je suis titulaire de deux Licences STAPS : Entrainement Sportif et Métiers de la Forme obtenues à Toulouse.</p>
-                    <p class="bold">J'ai toujours eu à cœur d'aider les autres à atteindre leurs objectifs de bien-être ou de performance.
-                    C'est la raison pour laquelle j'ai choisi ce métier qui me passionne.</p>
-                    <p class="elegant-list-first-p">Je suis à même de t'encadrer sur différents objectifs :</p>
-                    <ul class="elegant-list">
-                        <li>Prise de masse musculaire</li>
-                        <li>Remise en forme et tonification</li>
-                        <li>Apprentissage technique en boxe pieds/poings</li>
-                        <li>Self défense Féminine</li>
-                    </ul>
-                  </div>
+              </div>
+              <div class="column-text">
+                <div class="text">
+                  <p>Je suis titulaire de deux Licences STAPS : Entrainement Sportif et Métiers de la Forme obtenues à Toulouse.</p>
+                  <p class="bold">J'ai toujours eu à cœur d'aider les autres à atteindre leurs objectifs de bien-être ou de performance.
+                  C'est la raison pour laquelle j'ai choisi ce métier qui me passionne.</p>
+                  <p class="elegant-list-first-p">Je suis à même de t'encadrer sur différents objectifs :</p>
+                  <ul class="elegant-list">
+                      <li>Prise de masse musculaire</li>
+                      <li>Remise en forme et tonification</li>
+                      <li>Apprentissage technique en boxe pieds/poings</li>
+                      <li>Self défense Féminine</li>
+                  </ul>
                 </div>
               </div>
             </div>
