--- a/templates/contact.html
+++ b/templates/contact.html
@@ -74,8 +74,8 @@
     <footer>
         <div class="footer-container">
           <div class="footer-links">
-            <a href="index.html">Coaching</a>
-            <a href="#">Qui suis-je ?</a>
+            <a href="../index.html">Coaching</a>
+            <a href="a-propos.html">Qui suis-je ?</a>
             <a href="#">Résultats</a>
             <a href="tarif.html">Tarifs</a>
             <a href="#">Contact</a>
