Make index section lighter.

--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -48,7 +48,7 @@ section {
     height: 500px;
 }
 .coaching-methode {
-    background-color: var(--secondary-background-color);
+    background-color: #333333c7;
     height: 500px;
 }
 
