--- a/templates/boxe.html
+++ b/templates/boxe.html
@@ -8,16 +8,17 @@
 
 <body>
     <header>
-        <div id="logo">
+        <!-- <div id="logo">
             <img src="../static/assets/img/logo_cy_no_bg.png" alt="logo"/>
             <h1>CYCoaching</h1>
-        </div>
+        </div> -->
         <nav>
             <ul id="menu">
-                <li><a href="index.html">Coaching</a></li>
-                <li><a href="#">Qui suis-je ?</a></li>
-                <li><a active href="#">Tarifs</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="../index.html">Coaching</a></li>
+                <li><a active href="#">Boxe</a></li>
+                <li><a href="a-propos.html">Qui suis-je ?</a></li>
+                <li><a active href="tarif.html">Tarifs</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
