Add boxing page to nav menu.

--- a/templates/a-propos.html
+++ b/templates/a-propos.html
@@ -17,6 +17,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="../index.html">Coaching</a></li>
+                <li><a href="boxe.html">Boxe</a></li>
                 <li><a href="#">Qui suis-je ?</a></li>
                 <li><a href="tarif.html">Tarifs</a></li>
                 <li><a href="contact.html">Contact</a></li>
