--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,6 +13,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="../index.html">Coaching</a></li>
+                <li><a href="boxe.html">Boxe</a></li>
                 <li><a href="a-propos.html">Qui suis-je ?</a></li>
                 <li><a active href="tarif.html">Tarifs</a></li>
                 <li><a href="#">Contact</a></li>
