--- a/templates/tarif.html
+++ b/templates/tarif.html
@@ -16,6 +16,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="../index.html">Coaching</a></li>
+                <li><a href="boxe.html">Boxe</a></li>
                 <li><a href="a-propos.html">Qui suis-je ?</a></li>
                 <li><a active href="#">Tarifs</a></li>
                 <li><a href="contact.html">Contact</a></li>
