--- a/templates/tarif.html
+++ b/templates/tarif.html
@@ -93,12 +93,13 @@
       <footer>
         <div class="footer-container">
           <div class="footer-links">
-            <a href="../index.html">Coaching</a>
-            <a href="a-propos.html">Qui suis-je ?</a>
-            <a href="#">Résultats</a>
-            <a href="#">Tarifs</a>
-            <a href="contact.html">Contact</a>
-            <a href="#">Blog</a>
+            <div class="footer-links">
+              <a href="../index.html">Coaching</a>
+              <a href="boxe.html">Boxe</a>
+              <a href="a-propos.html">Qui suis-je ?</a>
+              <a href="#">Tarifs</a>
+              <a href="contact.html">Contact</a>
+            </div>
           </div>
           <div class="footer-social-icons">
             <a href="#"><i class="fab fa-instagram"></i> cycoaching</a>
