--- a/templates/a-propos.html
+++ b/templates/a-propos.html
@@ -56,11 +56,10 @@
         <div class="footer-container">
           <div class="footer-links">
             <a href="../index.html">Coaching</a>
+            <a href="boxe.html">Boxe</a>
             <a href="#">Qui suis-je ?</a>
-            <a href="#">Résultats</a>
             <a href="tarif.html">Tarifs</a>
             <a href="contact.html">Contact</a>
-            <a href="#">Blog</a>
           </div>
           <div class="footer-social-icons">
             <a href="#"><i class="fab fa-instagram"></i> cycoaching</a>
