--- a/templates/contact.html
+++ b/templates/contact.html
@@ -74,11 +74,10 @@
         <div class="footer-container">
           <div class="footer-links">
             <a href="../index.html">Coaching</a>
+            <a href="boxe.html">Boxe</a>
             <a href="a-propos.html">Qui suis-je ?</a>
-            <a href="#">Résultats</a>
             <a href="tarif.html">Tarifs</a>
             <a href="#">Contact</a>
-            <a href="#">Blog</a>
           </div>
           <div class="footer-social-icons">
             <a href="#"><i class="fab fa-instagram"></i> cycoaching</a>
