--- a/templates/boxe.html
+++ b/templates/boxe.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../static/assets/css/common-style.css"/>
+    <link rel="stylesheet" href="../static/assets/css/boxe.css"/>
     <title>Coach Sportif Toulouse - CYCoaching</title>
 </head>
 
@@ -23,8 +24,48 @@
         </nav>
     </header>
 
-    <section>
+    <div class="content">
+        <section>
+            <h2>Découvrir la boxe</h2>
+            <div class="boxe-content">
+                <div class="column-image">
+                  <div class="image-groupe">
+                    <img src="../static/assets/img/boxe-groupe.jpg" alt="Cours d'initiation à la boxe en groupe">
+                  </div>
+                </div>
+                <div class="column-text">
+                  <div class="text">
+                    <p>Tu as envie de découvrir une nouvelle discipline qui te permette de te défouler, <span class="bold">d'évacuer ton stress et de bosser ton cardio ?</p>
+                    <p>Alors j'ai ce qu'il te faut, je propose des cours de boxe pour débutant dans le but de te transmettre ma passion pour ce sport.</p>
+                    <p>Mais également pour que tu puisses évacuer tout tes tracas du quotidien à travers une discipline incroyable.</p>
+                  </div>
+                </div>
+            </div>
 
-    </section>
+            <div class="image-solo">
+                <img src="../static/assets/img/boxe-solo.jpg" alt="Cours d'initiation à la boxe en solo">
+            </div>
+
+            <a href="contact.html" class="button">Prêt(e) à mettre les gants ?</a>
+        </section>
+    </div>
+
+    <footer>
+        <div class="footer-container">
+          <div class="footer-links">
+            <a href="../index.html">Coaching</a>
+            <a href="#">Boxe</a>
+            <a href="a-propos.html">Qui suis-je ?</a>
+            <a href="tarif.html">Tarifs</a>
+            <a href="contact.html">Contact</a>
+          </div>
+          <div class="footer-social-icons">
+            <a href="#"><i class="fab fa-instagram"></i> cycoaching</a>
+            <a href="#"><i class="fas fa-phone"></i> 0612345678</a>
+          </div>
+        </div>
+        <p class="footer-text">CY Coaching</p>
+      </footer>
+
 </body>
 </html>
