--- a/templates/boxe.html
+++ b/templates/boxe.html
@@ -28,12 +28,12 @@
         <section>
             <h2>Découvrir la boxe</h2>
             <div class="boxe-content">
-                <div class="column-image">
-                  <div class="image-groupe">
+                <div class="column-image-boxe">
+                  <div class="image-groupe-boxe">
                     <img src="../static/assets/img/boxe-groupe.jpg" alt="Cours d'initiation à la boxe en groupe">
                   </div>
                 </div>
-                <div class="column-text">
+                <div class="column-text-boxe">
                   <div class="text">
                     <p>Tu as envie de découvrir une nouvelle discipline qui te permette de te défouler, <span class="bold">d'évacuer ton stress et de bosser ton cardio ?</p>
                     <p>Alors j'ai ce qu'il te faut, je propose des cours de boxe pour débutant dans le but de te transmettre ma passion pour ce sport.</p>
@@ -42,11 +42,31 @@
                 </div>
             </div>
 
-            <div class="image-solo">
+            <div class="image-solo-boxe">
                 <img src="../static/assets/img/boxe-solo.jpg" alt="Cours d'initiation à la boxe en solo">
             </div>
-
             <a href="contact.html" class="button">Prêt(e) à mettre les gants ?</a>
+        </section>
+
+        <section class="contact">
+        </section>
+
+        <section>
+          <h2>Découvrir le self defense</h2>
+          <div class="self-defense-content">
+            <div class="column-text-self">
+              <div class="text">
+                <p>Tu souhaite apprendre les rudiments d'un <span class="bold">self défense simple et efficace</span> afin d'optimiser ta sécurité ?</p>
+                <p>Alors ne cherche pas plus loin, on abordera ensemble les notions de <span class="bold">prévention, de protection et de détermination</span>.</p>
+                <p>Ces bases complétées d'un panel technique développé durant les séances seront éprouvées lors de mises en situation.</p>
+              </div>
+            </div>
+            <div class="column-image-self">
+              <div class="image-self">
+                <img src="../static/assets/img/self-defense-coaching.jpg" alt="Cours d'initiation au self defense">
+              </div>
+            </div>
+          </div>
         </section>
     </div>
 
