--- a/templates/boxe.html
+++ b/templates/boxe.html
@@ -56,7 +56,7 @@
           <div class="self-defense-content">
             <div class="column-text-self">
               <div class="text">
-                <p>Tu souhaite apprendre les rudiments d'un <span class="bold">self défense simple et efficace</span> afin d'optimiser ta sécurité ?</p>
+                <p>Tu souhaites apprendre les rudiments d'un <span class="bold">self défense simple et efficace</span> afin d'optimiser ta sécurité ?</p>
                 <p>Alors ne cherche pas plus loin, on abordera ensemble les notions de <span class="bold">prévention, de protection et de détermination</span>.</p>
                 <p>Ces bases complétées d'un panel technique développé durant les séances seront éprouvées lors de mises en situation.</p>
               </div>
