--- a/templates/a-propos.html
+++ b/templates/a-propos.html
@@ -10,19 +10,20 @@
 
 <body>
     <header>
-        <!-- <div id="logo">
-            <img src="../static/assets/img/logo_cy_no_bg.png" alt="logo"/>
-            <h1>CYCoaching</h1>
-        </div> -->
+      <div id="header-container">
+        <div id="logo">
+            <img src="../static/assets/img/logo-test.png" alt="logo"/>
+        </div>
         <nav>
             <ul id="menu">
                 <li><a href="../index.html">Coaching</a></li>
                 <li><a href="boxe.html">Boxe</a></li>
-                <li><a href="#">Qui suis-je ?</a></li>
+                <li><a active href="#">Qui suis-je ?</a></li>
                 <li><a href="tarif.html">Tarifs</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+    </div>
     </header>
 
     <div class="content">
