--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,15 +10,20 @@
 
 <body>
     <header>
+      <div id="header-container">
+        <div id="logo">
+            <img src="../static/assets/img/logo-test.png" alt="logo"/>
+        </div>
         <nav>
             <ul id="menu">
                 <li><a href="../index.html">Coaching</a></li>
-                <li><a href="boxe.html">Boxe</a></li>
+                <li><a active href="boxe.html">Boxe</a></li>
                 <li><a href="a-propos.html">Qui suis-je ?</a></li>
-                <li><a active href="tarif.html">Tarifs</a></li>
+                <li><a href="tarif.html">Tarifs</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+    </div>
     </header>
 
     <div class="content">
