--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="../static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="../static/assets/css/contact.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -84,12 +85,14 @@
             <a href="tarif.html">Tarifs</a>
             <a href="#">Contact</a>
           </div>
+          <div class="footer-logo">
+            <img src="../static/assets/img/logo-test.png" alt="logo"/>
+          </div>
           <div class="footer-social-icons">
             <a href="#"><i class="fab fa-instagram"></i> cycoaching</a>
             <a href="#"><i class="fas fa-phone"></i> 0612345678</a>
           </div>
         </div>
-        <p class="footer-text">Cy Coaching</p>
     </footer>
 </body>
 </html>
