--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -44,7 +44,7 @@ section {
   align-items: center;
 }
 .services {
-    background-color: var(--background-color);
+    background-color: #f1f1f1;
     height: 500px;
 }
 .coaching-methode {
