--- a/static/assets/css/common-style.css
+++ b/static/assets/css/common-style.css
@@ -42,6 +42,10 @@ h1, h2, h3 {
   font-family: 'Raleway', sans-serif;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 #logo img {
   float: left;
   margin-left: 10%;
@@ -141,6 +145,22 @@ footer {
 .footer-logo img{
   width: 35%;
   height: auto;
+}
+
+/* --------------------------------------------------------------- */
+/* Contact button */
+.contact-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #FF5500;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  max-width: 400px;
+}
+
+.contact-button:hover {
+  background-color: #FF4400;
 }
 
 /* ------------------------------------- */
