Make coaching page mobile version.

--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -1,5 +1,6 @@
 /* --------------------------------------------------------------- */
 /* Image de couverture */
+/* --------------------------------------------------------------- */
 .background-container {
   position: relative;
 }
@@ -35,8 +36,28 @@
   margin-bottom: 20px;
 }
 
+@media only screen and (max-width: 800px) {
+  .background-image {
+    background-image: url('../img/image_accueil_mobile.jpg');
+    padding: 300px 0;
+  }
+
+  .text-overlay {
+    top: 70%;
+  }
+
+  .text-overlay h1 {
+    font-size: 30px;
+  }
+
+  .text-overlay h2 {
+    font-size: 15px;
+  }
+}
+
 /* --------------------------------------------------------------- */
 /* Sections */
+/* --------------------------------------------------------------- */
 section {
   display: flex;
   flex-direction: column;
@@ -70,13 +91,35 @@ section {
   margin-left: 20px;
 }
 
+/* Media query pour les écrans plus petits (mobiles) */
+@media only screen and (max-width: 800px) {
+  .services {
+    height: auto;
+  }
+
+  .coaching-methode {
+    height: auto;
+  }
+
+  .services-wrapper {
+    flex-direction: column; /* Superpose les éléments */
+    align-items: center; /* Centre les éléments horizontalement */
+  }
+
+  .service-container {
+    flex: 0 0 80%; /* Largeur à 80% pour occuper l'écran */
+    /* width: 80%; Largeur à 80% pour occuper l'écran */
+    margin: 20px 0; /* Ajoute un espace entre les éléments */
+  }
+}
+
 /* --------------------------------------------------------------- */
 /* Avis */
+/* --------------------------------------------------------------- */
 #avis {
   text-align: center;
 }
-/* --------------------------------------------------------------- */
-/* Review cards */
+
 .review-card-container {
   display: flex;
   align-items: flex-start; /* Alignement vertical en haut */
@@ -87,6 +130,18 @@ section {
 
 .review-card-container:hover {
   animation-play-state: paused; /* Pause l'animation lorsque survolé */
+}
+
+@media only screen and (max-width: 800px) {
+  .review-card-container {
+    width: 100%;
+    overflow-x: auto;
+    animation: none;
+  }
+  .review-card {
+    flex: 0 0 80%;
+    margin: 0 10px;
+  }
 }
 
 @keyframes scrollReviews {
